--- a/src/main/metadata-au/classes/TriggerLeadTriggerHandler.cls
+++ b/src/main/metadata-au/classes/TriggerLeadTriggerHandler.cls
@@ -36,7 +36,7 @@ public class TriggerLeadTriggerHandler
         LeadHelper.auAfter_Insert_Update_Events(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.emailNotificationsToAssignedDealer(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.sendEmailNotificationsToAssignedDealer(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
-        LeadHelper.shareAccountwithAssignDealer(trigger.new);
+        LeadHelper.shareAccountwithAssignDealer(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
        // AuLeadHelper.auAfter_Insert_Update_Events(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
     }
     if(trigger.isAfter && trigger.isUpdate)
@@ -47,7 +47,7 @@ public class TriggerLeadTriggerHandler
         LeadHelper.auAfter_Insert_Update_Events(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.emailNotificationsToAssignedDealer(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.sendEmailNotificationsToAssignedDealer(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
-        LeadHelper.shareAccountwithAssignDealer(trigger.new);
+        LeadHelper.shareAccountwithAssignDealer(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
         //AuLeadHelper.auAfter_Insert_Update_Events(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
     }
     if(trigger.isBefore && trigger.isInsert)
@@ -60,7 +60,7 @@ public class TriggerLeadTriggerHandler
         LeadHelper.auBefore_Insert_Update_Events(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.leadPriorityScore(trigger.new);
 		LeadHelper.leaddeDuplication(trigger.new);
-		LeadHelper.updateDealerAssignmentDate(trigger.new);
+		LeadHelper.updateDealerAssignmentDate(newmap,oldmap,trigger.isinsert,trigger.isUpdate);
 		LeadHelper.DueDateForAssignedDealer(trigger.new);        
         //AuLeadHelper.auBefore_Insert_Update_Events(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
     }
@@ -71,7 +71,7 @@ public class TriggerLeadTriggerHandler
         LeadHelper.beforeInsert_UpdateEvents(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);*/
         LeadHelper.auBefore_Insert_Update_Events(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.auBeforeUpdateGenericVehicleRecordOnVehicleRelationship(trigger.new,oldmap,newmap);
-        LeadHelper.updateDealerAssignmentDate(trigger.new);
+        LeadHelper.updateDealerAssignmentDate(newmap,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.DueDateForAssignedDealer(trigger.new);
        // AuLeadHelper.auBefore_Insert_Update_Events(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
        // AuLeadHelper.auBeforeUpdateGenericVehicleRecordOnVehicleRelationship(trigger.new,oldmap,newmap);
