Fix for SFDCKR-635

--- a/src/main/metadata/classes/AddressSearchValidationController.cls
+++ b/src/main/metadata/classes/AddressSearchValidationController.cls
@@ -182,7 +182,7 @@ public class AddressSearchValidationController{
                     {
                         objPersonAccount.Mobile__c = '';
                     }                    
-                    if(objAccount.Individual_Home_Phone__c == null && objAccount.Mobile__c == null && objAccount.Work_Phone__c == null){
+                    if(objAccount.Individual_Home_Phone__c == '' && objAccount.Mobile__c == '' && objAccount.Work_Phone__c == ''){
                         ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.ERROR, Label.contact_information));
                     }
                     else{
